--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     font-family: 'Playfair Display', serif;
-    background-color: #F0DCC5;
+    background-color: #F8EDE4;
 }
 
 header {
@@ -23,8 +23,8 @@ figure {
 }
 
 img {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
 }
 
 figcaption {
@@ -50,7 +50,7 @@ nav a {
 }
 
 nav a:hover{
-    color: #D7BAA7;
+    color: #9A6B3F;
 }
 
 @media (max-width: 768px) {
