--- a/style.css
+++ b/style.css
@@ -1,24 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Inter:wght@400;600&display=swap');
 
 body {
-    margin: 0;
-    font-family: 'Playfair Display', serif;
+    margin: 0 auto;
+    font-family: "Inter", sans-serif;
     background-color: #F8EDE4;
+    max-width: 1000px;
 }
 
-header {
+h1,
+h2,
+h3 {
+  font-family: 'Playfair Display', serif;
+}
+
+
+.menu {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center;    
     background-color: #F0DCC5;
     padding: 1rem 4rem;
     border-bottom: 3px solid #27150F;
 }
 
-figure {
+nav > ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 25px;
+}
+
+nav > ul > li > a {
+    text-decoration: none;
+    color: #27150F;
+    font-size: 30px;
+    transition: 0.3s;
+}
+
+nav > ul > li > a:hover{
+    color: #9A6B3F;
+}
+
+.logo {
     display: flex;
     align-items: center;
-    gap: 0.7rem;
+    gap: 0.8rem;
     margin: 0;
 }
 
@@ -34,38 +61,125 @@ figcaption {
     letter-spacing: 0.1rem;
 }
 
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+figure {
     display: flex;
-    gap: 2.5rem;
+    align-items: center;
+    margin: 0;
 }
 
-nav a {
+.hero {
+    position: relative;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+
+.hero-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #F8EDE4;
+}
+
+.hero-content h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 2.2rem;
+    margin-bottom: 0.6rem;
+}
+
+.hero-content h2 {
+    font-family: 'Playfair Display', serif;
+    font-size: 1.4rem;
+    margin-bottom: 1.6rem;
+}
+
+.hero-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.explore-btn {
+    display: inline-block;
+    margin-top: 1.8rem;
+    padding: 1rem 3rem;
+    background-color: #C79A6D;
+    color: #F8EDE4;
+    font-family: 'Inter', sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    border-radius: 5px;
     text-decoration: none;
+    transition: transform 0.1s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+.explore-btn:hover {
+    background-color: #9A6B3F;
+}
+
+.explore-btn:active {
+    transform: scale(0.95);
+}
+
+.cafe-text {
     color: #27150F;
-    font-size: 40px;
-    transition: 0.3s;
+    text-align: center;
+    margin: 0 auto 3rem auto;
 }
 
-nav a:hover{
-    color: #9A6B3F;
+.cafe-text h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
 }
 
-@media (max-width: 768px) {
-    header {
-        flex-direction: column;
-        padding: 1rem 2rem;
-    }
+.cafe-text p {
+    font-size: 1.3rem;
+    margin-bottom: 1.5rem;
+}
 
-    nav ul {
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-    }
+.cafe-card {
+    margin-bottom: 5rem;
+    text-align: left;
+    color: #27150F;
+}
 
-    figcaption {
-        font-size: 1.5rem;
-    }
+.cafe-card p {
+    margin: 5px 0;
+    font-size: 1.1rem;
+}
+
+.cafe-name {
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    margin-top: 0.7rem;
+    color: #27150F;
+}
+
+.cafes {
+    margin: 4rem auto;
+    padding: 0 2rem;
+}
+
+.cafe-image {
+    display: block;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.cafe-image img {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    height: auto;
+    max-width: 600px;
+    border-radius: 12px;
+    object-fit: cover;
+}
+
+.tip {
+    text-align: center;
+    font-size: 1.1rem;
+    margin-bottom: 3rem;
 }
